--- a/Calculator/IPadStoryboard.storyboard
+++ b/Calculator/IPadStoryboard.storyboard
@@ -11,7 +11,7 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V5x-gw-L6T" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="CYA-Fi-Gh0" customClass="GraphViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Dee-hA-3VW" customClass="GraphView">
+                    <view key="view" contentMode="redraw" id="Dee-hA-3VW" customClass="GraphView">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
